# oq-gem-taxonomy

./: .gitignore  CHANGELOG  CONTRIBUTORS.txt  README.md  pyproject.toml
.github/workflows/: python-package.yml  release-to-pypi.yaml  test-package.yml
examples/: csv-config.conf
examples_tmpl/: csv-config.conf  example_notebook.ipynb  test.sh
examples_tmpl/files/: first.csv  simple.csv
examples_tmpl/helpers/: preprocess_taxonomy33.sh  sanitize_taxonomy33.sh
helpers/: changelog2ghrel.sh
openquake/: __init__.py
openquake/gem_taxonomy/: __init__.py  classes.py  scripts.py  version.py
openquake/gem_taxonomy/test/: validate_test.py
openquake/gem_taxonomy/test/src/: subfield.csv
