[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openquake.gem-taxonomy"
dynamic = ["version"]

dependencies = [
   "openquake.gem-taxonomy-data @ git+https://github.com/gem/oq-gem-taxonomy-data.git@v1.4.1",
   "parsimonious == 0.10.0",
   "setuptools>=65,<81"
]

requires-python = ">=3.11"
authors = [
  {name = "Matteo Nastasi", email = "nastasi@openquake.org"},
]
maintainers = [
  {name = "Matteo Nastasi", email = "nastasi@openquake.org"},
]
description = "Openquake Gem Taxonomy - Package to manage GEM Building Taxonomy strings"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["GEM", "taxonomy", "building", "standard", "openquake"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

 

[dependency-groups]
test = [
  "pytest == 8.3.3",
  "pytest-cov == 6.0.0"
]
dev = [
  "ipykernel"
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/gem/oq-gem-taxonomy"
"Bug Tracker" = "https://github.com/gem/oq-gem-taxonomy/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
"gem-taxonomy-info" = "openquake.gem_taxonomy.scripts:info"
"gem-taxonomy-validate" = "openquake.gem_taxonomy.scripts:validate"
"gem-taxonomy-explain" = "openquake.gem_taxonomy.scripts:explain"
"gem-taxonomy-csv-validate" = "openquake.gem_taxonomy.scripts:csv_validate"
"gem-taxonomy-specs2graph" = "openquake.gem_taxonomy.scripts:specs2graph"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.hatch.version]
path = "openquake/gem_taxonomy/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["openquake"]
